objects/dfsle__Log__c.object
<CustomObject>
    <description>DocuSign Log</description>
    <fields>
        <fullName>dfsle__Class__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__EntityId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>DocuSign entity ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__Method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__SourceId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Salesforce source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__TransactionId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Log</label>
    <listViews>
        <fullName>dfsle__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>dfsle__EntityId__c</columns>
        <columns>dfsle__SourceId__c</columns>
        <columns>dfsle__Severity__c</columns>
        <columns>dfsle__Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSL-{0000000}</displayFormat>
        <label>DocuSign Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>